# ADS

./: .gitlab-ci.yml  AdsLib.sln  CMakeLists.txt  Makefile  README
AdsLib/: AdsLib.vcxproj  AmsConnection.cpp  AmsConnection.h  NotificationDispatcher.cpp
AdsLibOOI/: AdsDevice.cpp  AdsLibOOI.vcxproj
AdsLibOOITest/: AdsLibOOITest.vcxproj  main.cpp
example/: Makefile  example.cpp  example.vcxproj
